Changelog Acumulus web shop extensions
======================================

This file contains a historical overview of changes in our own code.

8.1.5 (2024-06-??) (OC)
-----------------------
Bugs:
- ALL: Field product name on mappings form does not correspond with mapping for product
  name. As it was not yet really used, this is no big deal.
- OC4: Order statuses were not presented by their name (but by their language_id).

Refactorings:
- OC: Implemented the new "collect-complete architecture" for OpenCart.


8.1.4 (2024-05-22) (JOO)
------------------------
Bugs:
- JOO3: TypeError: Return value of Siel\Acumulus\Joomla\Helpers\Event::getCMSApplication()
  must be an instance of Joomla\CMS\Application\CMSApplicationInterface, instance of
  Joomla\CMS\Application\AdministratorApplication returned in Joomla/Helpers/Event.php:51
- JOO3: Return value of AcumulusController::getApp() must be an instance of
  Joomla\CMS\Application\CMSApplicationInterface, instance of
  Joomla\CMS\Application\AdministratorApplication returned.
- VM: TypeError: Argument 4 passed to
  Siel\Acumulus\Joomla\VirtueMart\Completors\Legacy\Creator::getVatData() must be of the
  type int, string given, called in Joomla\VirtueMart\Completors\Legacy\Creator.php on
  line 162 and defined in Joomla\VirtueMart\Completors\Legacy\Creator.php:414.
- VM: TypeError: Argument 2 passed to
  Siel\Acumulus\Joomla\VirtueMart\Completors\Legacy\Creator::getVariantLines() must be of
  the type int, string given, called in Joomla\VirtueMart\Completors\Legacy\Creator.php on
  line 181 and defined in Joomla\VirtueMart\Completors\Legacy\Creator.php:201.


8.1.3 (2024-05-21) (JOO)
------------------------
Bugs:
- JOO: Update procedure was not adapted to new library location.


8.1.2 (2024-05-15) (PS, WC)
---------------------------
Features
- ALL: Message "Required property vatRate is not set ..."  prevents the xml-message being